refactor auth Schema
